# FHEM-MCP

./: .env.example  .gitignore  README.md  controls_MCP.txt  docker-compose.yml
.claude-plugin/: marketplace.json
.github/workflows/: update-controls.yml
FHEM/: 98_MCP.pm
plugins/fhem/FHEMMain/: .mcp.json
plugins/fhem/FHEMMain/.claude-plugin/: plugin.json
server/: Dockerfile  pyproject.toml  requirements.txt
server/fhem_mcp/: __init__.py  config.py  fhem_client.py  oauth.py  oauth_routes.py  server.py
