[project]
name = "fhem-mcp"
version = "0.3.0"
description = "Model-Context-Protocol-Server für FHEM (internet-erreichbar, tokenbasiert)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "uvicorn>=0.30",
]

[project.scripts]
fhem-mcp = "fhem_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fhem_mcp"]
